created a blog and home pages

--- a/index.html
+++ b/index.html
@@ -10,10 +10,402 @@
     <link rel="stylesheet" href="./styles/4_index.css" />
     <link rel="stylesheet" href="./styles/5_footer.css" />
     <title>Home</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header class="header-container">
+      <div class="nav">
+        <div class="logo"><h1>{finsweet</h1></div>
+
+        <button class="menu__button">MENU</button>
+
+        <ul class="hidden menu-items">
+          <li><a href="../index.html"> Home </a></li>
+          <li><a href="./about.html"> About us </a></li>
+          <li><a href="./services.html"> Services </a></li>
+          <li><a href="./blog.html">Blog </a></li>
+          <li><a href="./contact.html"> Contact </a></li>
+        </ul>
+
+        <div class="header-left">
+          <div class="call_illustration">
+            <img
+              class="line_icon"
+              src="../assets/svg/header-line.svg"
+              alt="line"
+            />
+            <img
+              class="call_icon"
+              src="../assets/svg/call-icon.svg"
+              alt="call icon"
+            />
+          </div>
+          <div class="phone_number">
+            <p class="assistance">Road Assistance</p>
+            <p class="number">1800 265 24 52</p>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="book_service container">
+        <div class="book__service-left">
+          <h1 class="headline-1">
+            Get your vehicle service done online at one place
+          </h1>
+          <button class="btn">Book a service</button>
+          <div class="open">
+            <img src="./assets/svg/clock.svg" alt="clock icon" />
+            <div class="open-text">
+              <p class="top_text">We are open</p>
+              <p class="bottom_text">Monday to Friday 9:00 AM to 10:00 AM</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="book__service-right">
+          <img src="./assets/svg/home1.svg" alt="man checking car" />
+          <div class="quick-service">
+            <img src="./assets/svg/24hours.svg" alt="icon" />
+            <p>Quick service</p>
+          </div>
+          <div class="rating">
+            <div class="rating-items">
+              <p class="top-rating">4.5/5</p>
+              <p class="bottom-rating">Rating</p>
+            </div>
+            <img src="./assets/svg/stars.svg" alt="rating stars" />
+          </div>
+        </div>
+      </section>
+
+      <section class="questions">
+        <div class="questions-item container">
+          <div class="questions-left">
+            <h2 class="headline-2">We are taking car servicing seriously</h2>
+            <div class="question-left-block">
+              <div class="feature">
+                <img src="./assets/svg/covenient-home.svg" alt="icon" />
+                <p class="text-1">Convenient service</p>
+              </div>
+              <p class="body-text">
+                Through True Rich Attended does no end it his mother since real
+                had half every him.
+              </p>
+            </div>
+
+            <div class="question-left-block">
+              <div class="feature">
+                <img src="./assets/svg/expert-home.svg" alt="icon" />
+                <p class="text-1">Expert mechanics</p>
+              </div>
+              <p class="body-text">
+                Through True Rich Attended does no end it his mother since real
+                had half every him.
+              </p>
+            </div>
+
+            <div class="question-left-block">
+              <div class="feature">
+                <img src="./assets/svg/transparent-home.svg" alt="icon" />
+                <p class="text-1">Transparent pricing</p>
+              </div>
+              <p class="body-text">
+                Through True Rich Attended does no end it his mother since real
+                had half every him.
+              </p>
+            </div>
+            <a href="./pages/about.html"
+              >Know more about us <i class="fa-solid fa-arrow-right"></i
+            ></a>
+          </div>
+
+          <div class="questions-right">
+            <h3 class="form-title">Get a quote for the car service</h3>
+
+            <form>
+              <input type="location" placeholder="Enter your location" />
+              <input type="location" placeholder="Enter your location" />
+              <input type="location" placeholder="Enter your location" />
+              <input type="phone-number" placeholder="Your phone number" />
+              <button class="btn" type="submit">Get your quote</button>
+            </form>
+          </div>
+        </div>
+      </section>
+      <section class="process container">
+        <div class="process-left">
+          <h2 class="process-headline">
+            We follow a clear process to help you out.
+          </h2>
+          <p class="process-text">
+            Through True Rich Attended does no end it his mother since real had
+            half every him case in packages enquire
+          </p>
+          <button class="btn">Learn more</button>
+        </div>
+        <div class="process-right">
+          <div class="circles">
+            <img src="../assets/svg/circle1.svg" alt="" />
+            <img class="circle_line" src="../assets/svg/line.svg" alt="" />
+            <img src="../assets/svg/circle2.svg" alt="" />
+            <img class="circle_line" src="../assets/svg/line.svg" alt="" />
+            <img src="../assets/svg/circle3.svg" alt="" />
+          </div>
+          <div class="circles_text">
+            <p class="title-01">Get a Quote</p>
+            <p class="body-01">
+              Through True Rich Attended does no end it his mother since real
+              had half every
+            </p>
+
+            <p class="title-01">Book an Appointment</p>
+            <p class="body-01">
+              Through True Rich Attended does no end it his mother since real
+            </p>
+
+            <p class="title-01">Get your Service Done</p>
+            <p class="body-01">
+              Ecstatic unsatiable saw his giving Remain expense you position
+              concluded.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="services">
+        <p class="title-2 container">What we Offer</p>
+        <h2 class="services_headline container">
+          We offer full service auto repair & maintenance
+        </h2>
+        <div class="services_cards container">
+          <div class="white-card">
+            <img src="./assets/svg/home-icon1.svg" alt="car icon" />
+            <p class="white-card-text">Diagnostics</p>
+          </div>
+
+          <div class="white-card">
+            <img src="./assets/svg/home-icon2.svg" alt="car icon" />
+            <p class="white-card-text">Engine Repair</p>
+          </div>
+
+          <div class="orange-card">
+            <img src="./assets/svg/home-icon3.svg" alt="car icon" />
+            <p class="orange-card-text">Wheel Repair</p>
+          </div>
+
+          <div class="white-card">
+            <img src="./assets/svg/home-icon4.svg" alt="car icon" />
+            <p class="white-card-text">Oil Filter</p>
+          </div>
+
+          <div class="white-card">
+            <img src="./assets/svg/home-icon5.svg" alt="car icon" />
+            <p class="white-card-text">Body Work</p>
+          </div>
+
+          <div class="white-card">
+            <img src="./assets/svg/home-icon6.svg" alt="car icon" />
+            <p class="white-card-text">Batteries</p>
+          </div>
+
+          <div class="white-card">
+            <img src="./assets/svg/home-icon7.svg" alt="car icon" />
+            <p class="white-card-text">Insurance Claim</p>
+          </div>
+
+          <div class="white-card">
+            <img src="./assets/svg/home-icon8.svg" alt="car icon" />
+            <p class="white-card-text">Custom Service</p>
+          </div>
+        </div>
+        <a class="container" href="./pages/services.html"
+          >Learn about services <i class="fa-solid fa-arrow-right"></i
+        ></a>
+      </section>
+      <section class="contact">
+        <div class="contact__items">
+          <div class="left-img"></div>
+          <div class="contact_text">
+            <h3>Get in touch with us for your service related query</h3>
+            <button>Contact Us</button>
+          </div>
+          <div class="right-img"></div>
+        </div>
+      </section>
+      <section class="benefits">
+        <div class="benefits-items">
+          <div class="item">
+            <h2 class="benefit-number">20+</h2>
+            <p class="benefit-text">Proffesional</p>
+          </div>
+
+          <div class="item">
+            <h2 class="benefit-number">10+</h2>
+            <p class="benefit-text">Years Eperience</p>
+          </div>
+
+          <div class="item">
+            <h2 class="benefit-number">12K+</h2>
+            <p class="benefit-text">Service Closed</p>
+          </div>
+
+          <div class="item">
+            <h2 class="benefit-number">100%</h2>
+            <p class="benefit-text">Customer Satisfaction</p>
+          </div>
+        </div>
+      </section>
+      <section class="brands">
+        <h3 class="brand-headline">Brands we Serve</h3>
+        <div class="brand_items container">
+          <img src="./assets/svg/lgipsum1.svg" alt="logo" />
+          <img src="./assets/svg/lgipsum2.svg" alt="logo" />
+          <img src="./assets/svg/lgipsum3.svg" alt="logo" />
+          <img src="./assets/svg/lgipsum4.svg" alt="logo" />
+          <img src="./assets/svg/lgipsum5.svg" alt="logo" />
+          <img src="./assets/svg/lgipsum1.svg" alt="logo" />
+          <img src="./assets/svg/lgipsum2.svg" alt="logo" />
+          <img src="./assets/svg/lgipsum3.svg" alt="logo" />
+          <img src="./assets/svg/lgipsum4.svg" alt="logo" />
+          <img src="./assets/svg/lgipsum5.svg" alt="logo" />
+        </div>
+      </section>
+      <section class="review-container">
+        <h3 class="headline-3 container">
+          Our customers say the nicest things about our service
+        </h3>
+        <div class="review__cards container">
+          <div class="review">
+            <div class="nickname">
+              <img src="./assets/svg/jonathan.svg" alt="picture" />
+              <div class="names">
+                <p class="surname">Jonathan Vallem</p>
+                <p class="city">New york</p>
+              </div>
+            </div>
+            <p class="review-text">
+              I have got my car repaired at Finsweet many times before, they are
+              good at what they do. Not only did they repair my car in a short
+              comprehensive look on all the working
+            </p>
+          </div>
+
+          <div class="review">
+            <div class="nickname">
+              <img src="./assets/svg/smith.svg" alt="picture" />
+              <div class="names">
+                <p class="surname">Smith Johnson</p>
+                <p class="city">New york</p>
+              </div>
+            </div>
+            <p class="review-text">
+              I have got my car repaired at Finsweet many times before, they are
+              good at what they do. Not only did they repair my car in a short
+              comprehensive look on all the working
+            </p>
+          </div>
+        </div>
+
+        <div class="scrolling container">
+          <div class="line_image">
+            <img
+              class="line"
+              src="./assets/svg/scroll-lines.svg"
+              alt="scroll"
+            />
+          </div>
+          <div class="scroll-arrows">
+            <img
+              class="right-arrow"
+              src="./assets/svg/left-arrow.svg"
+              alt="arrow"
+            />
+            <img
+              class="left-arrow"
+              src="./assets/svg/right-arrow.svg"
+              alt="arrow"
+            />
+          </div>
+        </div>
+      </section>
+      <section class="faq">
+        <h3 class="headline-3">Frequently Asked Questions</h3>
+        <div class="faq-container container">
+          <div class="faq_questions-first">
+            <div class="text-with-minus">
+              <p class="title-3">How long should a car repair take?</p>
+              <img src="./assets/svg/minus.svg" alt="minus" />
+            </div>
+            <p class="faq-text">
+              I have got my car repaired at Finsweet many times before, they are
+              good at what they do. Not only did they repair my car I have got
+              my car repaired at Finsweet I have got my car repaired at Finsweet
+            </p>
+          </div>
+
+          <div class="faq_questions">
+            <p class="title-3">How do I schedule my car's appointment?</p>
+            <img src="./assets/svg/plus.svg" alt="plus" />
+          </div>
+
+          <div class="faq_questions">
+            <p class="title-3">What are the repair services provided?</p>
+            <img src="./assets/svg/plus.svg" alt="plus" />
+          </div>
+
+          <div class="faq_questions">
+            <p class="title-3">How do I find auto body shops near me?</p>
+            <img src="./assets/svg/plus.svg" alt="plus" />
+          </div>
+
+          <div class="faq_questions">
+            <p class="title-3">Genuine spare parts during car repair?</p>
+            <img src="./assets/svg/plus.svg" alt="plus" />
+          </div>
+        </div>
+      </section>
+
+      <section class="contact_2">
+        <div class="contact_2-left-side">
+          <h3>Get in touch with us for your service</h3>
+          <img src="../assets/svg/social.svg" alt="ig" />
+        </div>
+
+        <div class="contact_2-right-side">
+          <p class="body-02">Help line Number</p>
+          <p class="title-02">1800 265 24 52</p>
+          <p class="body-02">Address</p>
+          <p class="title-02">NH 234 Public Square San Francisco 65368</p>
+          <p class="body-02">We are open</p>
+          <p class="title-02">Monday to Friday 9:00 AM to  10:00  AM</p>
+        </div>
+      </section>
+    </main>
+    <footer class="footer_container">
+      <div class="footer_container-items">
+        <div class="footer_logo">
+          <h1>{finsweet</h1>
+        </div>
+
+        <div class="footer_nav">
+          <ul>
+            <li><a href="../index.html"> Home </a></li>
+            <li><a href="./about.html"> About us </a></li>
+            <li><a href="./services.html"> Services </a></li>
+            <li><a href="./blog.html">Blog </a></li>
+            <li><a href="./contact.html"> Contact </a></li>
+          </ul>
+        </div>
+
+        <p>@ Copyright Finsweet 2021</p>
+      </div>
+    </footer>
   </body>
 </html>
