--- a/pages/post.html
+++ b/pages/post.html
@@ -12,8 +12,157 @@
     <title>Blog Single</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header class="header-container">
+      <div class="nav">
+        <div class="logo"><h1>{finsweet</h1></div>
+
+        <button class="menu__button">MENU</button>
+
+        <ul class="hidden menu-items">
+          <li><a href="../index.html"> Home </a></li>
+          <li><a href="./about.html"> About us </a></li>
+          <li><a href="./services.html"> Services </a></li>
+          <li><a href="./blog.html">Blog </a></li>
+          <li><a href="./contact.html"> Contact </a></li>
+        </ul>
+
+        <div class="header-left">
+          <div class="call_illustration">
+            <img
+              class="line_icon"
+              src="../assets/svg/header-line.svg"
+              alt="line"
+            />
+            <img
+              class="call_icon"
+              src="../assets/svg/call-icon.svg"
+              alt="call icon"
+            />
+          </div>
+          <div class="phone_number">
+            <p class="assistance">Road Assistance</p>
+            <p class="number">1800 265 24 52</p>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="post container">
+        <p class="post_date">Posted on October 6th 2021</p>
+        <h3 class="headline-3">
+          Should I Buy a New Car or Lease a New Car in 2021?
+        </h3>
+        <p class="text">
+          We provide a full range of front end mechanical repairs for all makes
+          and models of cars, no matter the cause. This includes, We provide a
+          full range of front end mechanical
+        </p>
+        <div class="image">
+          <img class="first-img" src="../assets/svg/post1.svg" alt="car" />
+        </div>
+        <h4 class="headline-4">This is a blog post headline</h4>
+        <p class="text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
+          dignissim dolor et dui bibendum aliquam. Mauris a quam sit amet dui
+          auctor dictum eget a elit. Pellentesque varius diam risus, ut
+          condimentum lorem volutpat vel. Nam vel orci pharetra eros pulvinar
+          cursus nec quis tellus. Quisque feugiat tortor lectus, pretium
+          interdum justo tincidunt a. Donec at congue lectus. Nulla facilisi.
+          Phasellus consectetur sapien accumsan lectus tincidunt placerat. Etiam
+          ornare nibh vel dui egestas, eu posuere metus convallis.
+        </p>
+        <p class="text">
+          Ut non urna a odio condimentum dictum. Proin egestas erat a orci
+          ultrices, vitae bibendum libero posuere. Quisque laoreet tincidunt
+          justo. Vestibulum congue dictum libero finibus vehicula. Aliquam nisi
+          velit, ultricies eget enim vel, venenatis mollis ante. Maecenas
+          sodales tristique quam. Suspendisse fringilla massa vel dolor ornare
+          rhoncus. Nullam ut orci mattis leo varius laoreet sed mollis dui.
+          Aenean placerat nec enim ut finibus. Maecenas suscipit nibh eu neque
+          egestas, non condimentum mi bibendum. Sed est eros, molestie
+          consectetur auctor non, lobortis quis tortor. Nam cursus imperdiet
+          massa volutpat hendrerit. Sed suscipit ligula iaculis lorem sagittis
+          tincidunt. Etiam pellentesque metus vel enim iaculis aliquam. Mauris
+          at nisi sed elit gravida malesuada.
+        </p>
+        <img class="second-img" src="../assets/svg/post2.svg" alt="road" />
+        <h5 class="headline-5">This is a small blog post headline</h5>
+        <p class="text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
+          dignissim dolor et dui bibendum aliquam. Mauris a quam sit amet dui
+          auctor dictum eget a elit. Pellentesque varius diam risus, ut
+          condimentum lorem volutpat vel. Nam vel orci pharetra eros pulvinar
+          cursus nec quis tellus. Quisque feugiat tortor lectus, pretium
+          interdum justo tincidunt a. Donec at congue lectus. Nulla facilisi.
+          Phasellus consectetur sapien accumsan lectus tincidunt placerat. Etiam
+          ornare nibh vel dui egestas, eu posuere metus convallis.
+        </p>
+        <p class="text_with_border">
+          Ut non urna a odio condimentum dictum. Proin egestas erat a orci
+          ultrices, vitae bibendum libero posuere. Quisque laoreet tincidunt
+          justo. Vestibulum congue dictum libero finibus vehicula. Aliquam nisi
+          velit, ultricies eget enim vel, venenatis mollis ante.
+        </p>
+        <p class="text">
+          Ut non urna a odio condimentum dictum. Proin egestas erat a orci
+          ultrices, vitae bibendum libero posuere. Quisque laoreet tincidunt
+          justo. Vestibulum congue dictum libero finibus vehicula. Aliquam nisi
+          velit, ultricies eget enim vel, venenatis mollis ante. Maecenas
+          sodales tristique quam. Suspendisse fringilla massa vel dolor ornare
+          rhoncus. Nullam ut orci mattis leo varius laoreet sed mollis dui.
+          Aenean placerat nec enim ut finibus. Maecenas suscipit nibh eu neque
+          egestas, non condimentum mi bibendum. Sed est eros, molestie
+          consectetur auctor non, lobortis quis tortor. Nam cursus imperdiet
+          massa volutpat hendrerit. Sed suscipit ligula iaculis lorem sagittis
+          tincidunt. Etiam pellentesque metus vel enim iaculis aliquam. Mauris
+          at nisi sed elit gravida malesuada.
+        </p>
+      </section>
+      <section class="contact">
+        <div class="contact__items">
+          <div class="left-img"></div>
+          <div class="contact_text">
+            <h3>Get in touch with us for your service related query</h3>
+            <button>Contact Us</button>
+          </div>
+          <div class="right-img"></div>
+        </div>
+      </section>
+
+      <section class="contact_2">
+        <div class="contact_2-left-side">
+          <h3>Get in touch with us for your service</h3>
+          <img src="../assets/svg/social.svg" alt="ig" />
+        </div>
+
+        <div class="contact_2-right-side">
+          <p class="body-02">Help line Number</p>
+          <p class="title-02">1800 265 24 52</p>
+          <p class="body-02">Address</p>
+          <p class="title-02">NH 234 Public Square San Francisco 65368</p>
+          <p class="body-02">We are open</p>
+          <p class="title-02">Monday to Friday 9:00 AM to  10:00  AM</p>
+        </div>
+      </section>
+    </main>
+    <footer class="footer_container">
+      <div class="footer_container-items">
+        <div class="footer_logo">
+          <h1>{finsweet</h1>
+        </div>
+
+        <div class="footer_nav">
+          <ul>
+            <li><a href="../index.html"> Home </a></li>
+            <li><a href="./about.html"> About us </a></li>
+            <li><a href="./services.html"> Services </a></li>
+            <li><a href="./blog.html">Blog </a></li>
+            <li><a href="./contact.html"> Contact </a></li>
+          </ul>
+        </div>
+
+        <p>@ Copyright Finsweet 2021</p>
+      </div>
+    </footer>
   </body>
 </html>
