--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/3_header.css" />
     <link rel="stylesheet" href="./styles/4_index.css" />
     <link rel="stylesheet" href="./styles/5_footer.css" />
+    <script src="../scripts/header.js" defer></script>
     <title>Home</title>
     <link
       rel="stylesheet"
@@ -22,15 +23,22 @@
     <header class="header-container">
       <div class="nav">
         <div class="logo"><h1>{finsweet</h1></div>
-
-        <button class="menu__button">MENU</button>
+        <div class="toggler"><i class="fa-solid fa-bars"></i></div>
 
         <ul class="hidden menu-items">
-          <li><a href="../index.html"> Home </a></li>
-          <li><a href="./about.html"> About us </a></li>
-          <li><a href="./services.html"> Services </a></li>
-          <li><a href="./blog.html">Blog </a></li>
-          <li><a href="./contact.html"> Contact </a></li>
+          <li class="navigation__item"><a href="./index.html"> Home </a></li>
+          <li class="navigation__item">
+            <a href="./pages/about.html"> About us </a>
+          </li>
+          <li class="navigation__item">
+            <a href="./pages/services.html"> Services </a>
+          </li>
+          <li class="navigation__item">
+            <a href="./pages/blog.html">Blog </a>
+          </li>
+          <li class="navigation__item">
+            <a href="./pages/contact.html"> Contact </a>
+          </li>
         </ul>
 
         <div class="header-left">
