--- a/pages/about.html
+++ b/pages/about.html
@@ -23,15 +23,20 @@
     <header class="header-container">
       <div class="nav">
         <div class="logo"><h1>{finsweet</h1></div>
-
-        <button class="menu__button">MENU</button>
+        <div class="toggler"><i class="fa-solid fa-bars"></i></div>
 
         <ul class="hidden menu-items">
-          <li><a href="../index.html"> Home </a></li>
-          <li><a href="./about.html"> About us </a></li>
-          <li><a href="./services.html"> Services </a></li>
-          <li><a href="./blog.html">Blog </a></li>
-          <li><a href="./contact.html"> Contact </a></li>
+          <li class="navigation__item"><a href="../index.html"> Home </a></li>
+          <li class="navigation__item">
+            <a href="./about.html"> About us </a>
+          </li>
+          <li class="navigation__item">
+            <a href="./services.html"> Services </a>
+          </li>
+          <li class="navigation__item"><a href="./blog.html">Blog </a></li>
+          <li class="navigation__item">
+            <a href="./contact.html"> Contact </a>
+          </li>
         </ul>
 
         <div class="header-left">
